--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
     <%= stylesheet_link_tag :reset %>
     <%= stylesheet_link_tag :main %>
     <%= stylesheet_link_tag :ionicons %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <%= javascript_include_tag :all %>
     <%= javascript_include_tag :main %>
     <%= javascript_include_tag :accordian %>
@@ -61,8 +62,6 @@
       </section>
     </header>
 
-    <h2>Before</h2>
     <%= yield %>
-    <h2>After</h2>
   </body>
 </html>
