Two columns added to index label area

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,11 +3,19 @@ title: Welcome to Yaurin Transportation
 ---
 
 <div class="ad-spacer"></div>
-	<section class="banner">
+<!-- 	<section class="banner">
 		<div class="wrapper">
 			
 		</div>
-	</section>
+	</section> -->
+	<div class="banner-wrapper">
+		<div class="left">
+			Left
+		</div>
+		<div class="right">
+			Right
+		</div>
+	</div>	
 	<div class="wrapper">
 		<section class="touts">
 			<section class="tout">
