--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
     <%= stylesheet_link_tag :reset %>
     <%= stylesheet_link_tag :main %>
     <%= stylesheet_link_tag :ionicons %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <%= javascript_include_tag :all %>
     <%= javascript_include_tag :main %>
