add services list

--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,1 +1,30 @@
 <%= partial "banner" %>
+
+<div class="services-list-container">
+	<div class="services-list-title">
+		<h3>Vehiculos de Varios Tamanos</h3>
+	</div>
+	<ul class="services-list">
+		<li>
+			<i class="fa fa-chevron-right"></i>Remplazos Servicio Express
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Furgonetas de 500kg
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Vehiculo con Conductor
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Furgonetas de 1500kg
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Vehiculos Frigorificos
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Envios Urgentes
+		</li>
+		<li>
+			<i class="fa fa-chevron-right"></i>Reparto en Plaza
+		</li>
+	</ul>
+</div>
