add footer to all pages

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -64,9 +64,15 @@
       </section>
     </header>
 
-    <%= yield %>
-
-    <div class="footer">
+    <div class="content-wrapper">
+      <%= yield %>
     </div>
+
+    <footer>
+      <div class="wrapper">
+        © 2015 Transportes Yaurin. Made in NY.
+      </div>
+    </footer>
   </body>
 </html>
+  
