--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -1,14 +1,20 @@
+.banner-wrapper {
+	height: 237px;
+}
+
 .left {
-	background: url(../images/welcome.jpg) no-repeat;
-	height: 300px;
+	background: url(../images/vans.jpg) no-repeat;
+    height: 100%;
     float: left;
-    width: 75%;
+    width: 69%;
+    border: solid #FAAB18 3px;
+    box-sizing: border-box;
+    background-size: cover;
 }
 
 .right {
-    background-color: Aqua;
-    margin-left: 75%;
-    height: 300px;
+    margin-left: 69%;
+    height: 100%;
 }
 
 .cf:before,
