banner picture animation

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -3,7 +3,7 @@
 }
 
 .left {
-	background: url(../images/vans.jpg) no-repeat;
+	background: url(../images/welcome.jpg) no-repeat;
     height: 100%;
     float: left;
     width: 69%;
