Replace contact page background image with img element
This will help us more easily structure the page according to the layout we want.

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,6 +1,7 @@
 <div class="ad-spacer"></div>
 
 <section class="bannercontact">
+	<img src="images/contact1.jpg" alt="" />
 	<header class="connect-header">
 		<hgroup>
 			<h1 class="connect-title">Let&#8217;s Connect</h1>
