Use a data element rather than a class for the services jquery selection

--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -5,7 +5,7 @@
 		<div class="services-list-title">
 			<h3>Vehiculos de Varios Tamanos</h3>
 		</div>
-		<ul class="services-list"/>
+		<ul class="services-list" data-type="services-list"/>
 	</div>
 	<div class="service-description">
 	</div>
