added selectable contact list

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,4 +1,12 @@
 <%= partial "banner" %>
 
+<div class="contact-content-container">
+	<div class="selectable-list-container">
+		<div class="selectable-list-title">
+			<h3>Vehiculos de Varios Tamanos</h3>
+		</div>
+		<ul class="selectable-list" data-type="contact-list"/>
+	</div>
+	<div class="selectable-list-description"/>
+</div>
 <a href="mailto:youremailaddress">Email Me</a> 
-
