--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,12 +1,11 @@
 <%= partial "banner" %>
 
-<div class="services-container">
-	<div class="services-list-container">
-		<div class="services-list-title">
+<div class="services-content-container">
+	<div class="selectable-list-container">
+		<div class="selectable-list-title">
 			<h3>Vehiculos de Varios Tamanos</h3>
 		</div>
-		<ul class="services-list" data-type="services-list"/>
+		<ul class="selectable-list" data-type="services-list"/>
 	</div>
-	<div class="service-description">
-	</div>
+	<div class="selectable-list-description"/>
 </div>
