--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -375,7 +375,7 @@ footer {
 	border-radius: 3px;
 }
 
-div.services-list-title {
+div.selectable-list-title {
 	color: #00589F;
 	font-family: 'Merriweather', serif;
 	border-bottom: solid #666666 2px;
@@ -383,7 +383,7 @@ div.services-list-title {
 	text-align: center;
 }
 
-ul.services-list li {
+ul.selectable-list li {
 	border-bottom: solid #666666 1px;
 	margin-left: 15px;
 	margin-right: 15px;
@@ -393,16 +393,16 @@ ul.services-list li {
 	font-weight: bold;
 }
 
-ul.services-list i {
+ul.selectable-list i {
 	color: #00589F;
 }
 
-div.services-list-container {
+div.selectable-list-container {
 	width: 22%;
 	float: left;
 }
 
-div.service-description {
+div.selectable-list-description {
 	margin-left: 22%;
     width: 44%;
     height: 190px;
