style email link

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -407,6 +407,22 @@ div.selectable-list-description {
     width: 44%;
     height: 190px;
 	border: solid;
+	padding: 10px;
+}
+.email {
+color: blue;
+margin-bottom: 15px;
+}
+.contact-me {	
+	margin-top: 30px;
+}
+
+.contact-me a {
+	background-color: blue;
+	text-align: left;
+	padding: 10px;
+	font-size: 30px;
+	color: white;
 }
 
 div.footer {
