Created a nested banner wrapper layout and used in on index and services page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,6 @@
 ---
 title: Welcome to Yaurin Transportation
 ---
-<%= partial "banner" %>
 
 <section class="touts">
 	<section class="tout">
@@ -31,4 +30,4 @@ title: Welcome to Yaurin Transportation
 		</div>
 		<!-- <a class="secNavButton">CONFIABLE</a> -->
 	</section>
-</section>
+</div>
