--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -63,6 +63,8 @@
         </nav>
       </section>
     </header>
+    
+    <div class="ad-spacer"></div>
 
     <div class="content-wrapper">
       <%= yield %>
