--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,11 +1,10 @@
-<%= partial "banner" %>
-
 <div class="services-content-container">
 	<div class="selectable-list-container">
 		<div class="selectable-list-title">
 			<h3>Vehiculos de Varios Tamanos</h3>
 		</div>
-		<ul class="selectable-list" data-type="services-list"/>
+		<ul class="selectable-list" data-type="services-list"></ul>
 	</div>
-	<div class="selectable-list-description"/>
+	<div class="selectable-list-description">
+	</div>
 </div>
