--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,5 +1,3 @@
-<%= partial "banner" %>
-
 <div class="contact-content-container">
 	<div class="selectable-list-container">
 		<div class="selectable-list-title">
@@ -7,6 +5,8 @@
 		</div>
 		<ul class="selectable-list" data-type="contact-list"/>
 	</div>
-	<div class="selectable-list-description"/>
+	<div class="selectable-list-description">
+	</div>
+
+	<a href="mailto:youremailaddress">Email Me</a> 
 </div>
-<a href="mailto:youremailaddress">Email Me</a> 
