fix right content panel for index page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,4 +30,4 @@ title: Welcome to Yaurin Transportation
 		</div>
 		<!-- <a class="secNavButton">CONFIABLE</a> -->
 	</section>
-</div>
+</section>
