work in progress

--- a/source/services_right_content.html.erb
+++ b/source/services_right_content.html.erb
@@ -1,1 +1,8 @@
-services
+<div class="services-content-container">
+	<div class="service-prices-container">
+		<div class="collapsed-expandable-item">String 1</div>
+		<div class="collapsed-expandable-item">String 2</div>
+		<div class="collapsed-expandable-item">String 3</div>
+		<div class="collapsed-expandable-item">String 4</div>
+	</div>
+</div>
