expandable services pricing

--- a/source/services_right_content.html.erb
+++ b/source/services_right_content.html.erb
@@ -1,8 +1,38 @@
 <div class="services-content-container">
 	<div class="service-prices-container">
-		<div class="collapsed-expandable-item">String 1</div>
-		<div class="collapsed-expandable-item">String 2</div>
-		<div class="collapsed-expandable-item">String 3</div>
-		<div class="collapsed-expandable-item">String 4</div>
+		<div class="sidebar-buttons-wrapper">
+		    <div data-item-name="priorityMailExpress" class="expandable-item collapsed">
+				<button  onclick="expandItem('priorityMailExpress')">
+					<i class="fa fa-chevron-down" aria-hidden="true"></i> Priority Mail Express
+				</button>
+				<div class="expandable-item-details">
+					These are some things for express mail
+				</div>
+			</div>
+			<div data-item-name="everydoormail" class="expandable-item collapsed">
+				<button  onclick="expandItem('everydoormail')">
+					<i class="fa fa-chevron-down" aria-hidden="true"></i>Every Door Mail 
+				</button>
+				<div class="expandable-item-details">
+					These are some things for express mail
+				</div>
+			</div>
+			<div data-item-name="standardmail" class="expandable-item collapsed">
+				<button  onclick="expandItem('standardmail')">
+					<i class="fa fa-chevron-down" aria-hidden="true"></i>Standard Mail 
+				</button>
+				<div class="expandable-item-details">
+					These are some things for express mail
+				</div>
+			</div>
+			<div data-item-name="firstclassmail" class="expandable-item collapsed">
+				<button  onclick="expandItem('firstclassmail')">
+					<i class="fa fa-chevron-down" aria-hidden="true"></i>First Class Mail 
+				</button>
+				<div class="expandable-item-details">
+					These are some things for express mail
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
