adding about page initial layout

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,5 +1,24 @@
 ---
-title: Welcome to Middleman
+title: About
 ---
 
-<h1>About US and so much more</h1>
+<section class="touts">
+	<section class="about-column" data-type="accordian">
+		<h2 class="focusPointHeading">Our History</h2>
+		<div class="focusPoint">
+			<div class="preview">
+				<p style="margin-top:10px;height:80px;">Excellence. Simply Delivered. International express deliveries; global freight forwarding rapido en cargas, horarios.!</p>
+			</div>
+			<div class="buttonContent">	
+				<p style="margin-top:10px">Sed mi nisl, molestie a luctus ut, gravida non elit. Vestibulum sollicitudin urna a nibh auctor nec eleifend nunc faucibus. Duis eu lacus augue. Aliquam et tellus nec purus congue rutrum. Nunc ante orci, rutrum at tempus imperdiet, semper nec lorem. Nam sed odio nec neque vestibulum congue. Ut imperdiet nibh nec tellus lobortis semper vel dictum lacus. Pellentesque condimentum, purus id ultricies auctor, justo mi semper odio, in sodales sapien arcu ut est. Aliquam vestibulum eros quis justo pretium posuere. Vestibulum a odio sed tellus malesuada blandit nec quis elit.</p>
+			</div>
+		</div>
+		<a class="secNavButton">READ MORE...</a>
+	</section>
+	<section class="about-column">
+		<h2 class="focusPointHeading">Leadership</h2>
+		<div class="inside buttonContent">
+			<p style='margin-top:10px;'>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+		</div>
+	</section>
+</section>
