--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Welcome to Yaurin Transportation
 ---
 
 <section class="touts">
-	<section class="tout">
+	<section data-type="accordian" class="tout">
 		<h2 class="focusPointHeading">Rapido</h2>
 		<div class="focusPoint">
 			<div class="preview">
