--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,3 +1,7 @@
+---
+title: Contact
+---
+
 <div class="contact-content-container">
 	<div class="selectable-list-container">
 		<div class="selectable-list-title">
