--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,3 +1,7 @@
+---
+title: Services
+---
+
 <div class="services-content-container">
 	<div class="selectable-list-container">
 		<div class="selectable-list-title">
